# ai-bridge-router

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  Cargo.toml  INSTALL_COMMANDS.sh  README.md  SETUP.md  cargo-deny.toml  config.toml  config.toml.example  deny.toml  docker-compose.monitoring.yml  package-lock.json  package.json  rust-toolchain.toml
.cursor/rules/: bridge-router.mdc
.github/workflows/: ci.yml  fullstack-ci.yml  migration-check.yml  security.yml
.husky/: commit-msg  pre-commit  pre-push
.sqlx/: query-15c9bb0c7b7f32c87a2f8c3a5c4a8a4e4e8c7b5d5f1a8b9c5d3e2f4a7b8c9d0e1f.json  query-2d0dc0d5b8fbeb7252d910046ce0a198e271d89326da126e188562a27e53ccb6.json
docs/: monitoring-setup.md
frontend/: .gitignore  astro.config.mjs  package-lock.json  package.json  tsconfig.json  vercel.json
frontend/public/: manifest.json  offline.html  robots.txt  sw.js
frontend/src/actions/: index.ts
frontend/src/components/: ChainLogo.tsx  EmptyState.tsx  FAQItem.tsx  FeatureCard.tsx  Footer.tsx  HeroSection.tsx  LoadingSection.tsx  Navigation.tsx  OptimizedImage.tsx  ResultsSection.tsx  RouteCard.tsx  RouteCardSkeleton.tsx  RouteQuoteForm.tsx  RouteQuoteFormWrapper.tsx  StatCard.tsx  (+6 more)
grafana/dashboards/: bridge-router-dashboard.json
migrations/: 001_create_audit_reports.sql  002_create_exploit_history.sql  003_seed_security_data.sql  004_create_api_keys.sql
prometheus/: prometheus.yml
scripts/: setup-hooks.sh  start-monitoring.sh
src/: app_state.rs  lib.rs  main.rs  middleware.rs
src/cache/: mod.rs
src/config/: mod.rs  settings.rs
src/db/: mod.rs  pool.rs  repository.rs
src/middleware/: auth.rs  trace_id.rs
src/models/: bridge.rs  mod.rs  quote.rs  security.rs
src/routes/: auth.rs  bridges.rs  health.rs  mod.rs  quotes.rs  security.rs
src/services/: bridge_client.rs  gas_price.rs  mod.rs  recommendation.rs  redis_monitor.rs  scoring.rs  security_scoring.rs  token_price.rs
src/telemetry/: logging.rs  metrics.rs  mod.rs
src/utils/: error.rs  errors.rs
tests/: bridge_client_test.rs  cache_test.rs  db_test.rs  health_test.rs  hop_integration_test.rs  ip_extraction_test.rs  quotes_integration_test.rs  quotes_scoring_integration_test.rs  redis_functions_test.rs  security_integration_test.rs  security_test.rs  telemetry_integration_test.rs
(+48 files in other folders)
