[package]
name = "bridge-router"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = {version = "1", features = ["full"]}
anyhow = "1.0.100"
axum = "0.8.5"
chrono = {version = "0.4.38", features = ["serde"]}
config = "0.15.17"
dotenvy = "0.15.7"
redis = "0.32.6"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres"], default-features = false}
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.1"
tower-http = {version = "0.6.2", features = ["cors", "trace"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
